# meshai-sdk-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/meshai/: __init__.py  batcher.py  client.py  config.py  transport.py
src/meshai/integrations/: agno.py  anthropic.py  autogen.py  bedrock.py  crewai.py  gemini.py  langchain.py  llamaindex.py  openai.py  pydantic_ai.py  semantic_kernel.py
tests/: test_batcher.py  test_client.py  test_compliance.py  test_governance.py  test_queries.py  test_transport.py
