[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshai-sdk"
version = "0.2.0"
description = "MeshAI Python SDK — Agent Control Plane client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "MeshAI Labs", email = "hello@meshai.dev" }]
keywords = ["ai", "agents", "monitoring", "observability", "meshai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
crewai = ["crewai>=0.80.0"]
langchain = ["langchain-core>=0.3.0"]
autogen = ["autogen-core>=0.4.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://meshai.dev"
Documentation = "https://meshai.dev/docs/sdk"
Repository = "https://github.com/meshailabs-org/meshai-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/meshai"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
